# pico-examples

./: CMakeLists.txt
led_seg/: CMakeLists.txt  led_seg.c
